button label changed

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
 
-              <button type="button" id="submit" class="btn btn-primary">Primary</button>
+              <button type="button" id="submit" class="btn btn-primary">Send message</button>
           </form>
   <!--end of form-->
 
